Initial sharing of project
Co-Authored-By: Jaideep Chauhan <67269475+jaideep25@users.noreply.github.com>

--- a/less/sudoku.less
+++ b/less/sudoku.less
@@ -6,29 +6,26 @@
   margin-left: auto;
   margin-right: auto;
   font-size: 16pt;
-
-  td {
-    border: 1px solid black;
-    width: 35px;
-    height: 35px;
-  }
-
-  input {
-    width: 35px;
-    height: 35px;
-    border: 0px;
-    text-align: center;
-  }
+}
+.sudoku-table td {
+  border: 1px solid black;
+  width: 35px;
+  height: 35px;
+}
+.sudoku-table input {
+  width: 35px;
+  height: 35px;
+  border: 0px;
+  text-align: center;
 }
 
 .controls {
   margin-top: 15px;
   margin-left: auto;
   margin-right: auto;
-
-  * {
-    margin-left: 5px;
-  }
+}
+.controls * {
+  margin-left: 5px;
 }
 
 .i2, .i5 {
@@ -39,16 +36,12 @@
   border-right: 3px solid black !important;
 }
 
-.not-editable {
-  input {
-    font-weight: bold;
-  }
+.not-editable input {
+  font-weight: bold;
 }
 
-.has-conflict {
-  input {
-    color: red;
-  }
+.has-conflict input {
+  color: red;
 }
 
 @media (max-width: 600px) {
@@ -73,11 +66,10 @@
   height: 400px;
   margin-left: auto;
   margin-right: auto;
-
-  * {
-    margin-left: 5px;
-    font-size: 20px;
-  }
+}
+.dialog * {
+  margin-left: 5px;
+  font-size: 20px;
 }
 
 .dialog-close {
